--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ## GitHub Deploy to /Docs
 ## 
-baseurl = "https://dzoladz.github.io/dzoladz/docs/"  # End your URL with a `/` trailing slash.
+baseurl = "https://dzoladz.github.io/dzoladz/"  # End your URL with a `/` trailing slash.
 publishDir = "docs"
 
 title = ""
