--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 baseurl = "https://dzoladz.github.io/dzoladz/"  # End your URL with a `/` trailing slash. Github Deploy.
+#baseurl = "https://www.derekzoladz.com/" # End your URL with a `/` trailing slash. Production Deploy.
 publishDir = "docs"
 
 title = ""
